switching to mdl, rewriting auth, ejs template and nice layout

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,787 +1,45 @@
-@font-face {
-    font-family: 'Cisco Sans Extra Light';
-    src: url('../fonts/CiscoSansExtraLight.otf');
+#messages-box{
+
+    margin: 20px;
 }
 
-@font-face {
-    font-family: 'Kitchen Sink';
-    src: url('../fonts/kitchen-sink.ttf');
-    font-weight: normal;
-    font-style: normal;
+
+#loader{
+  position:fixed;
+  top: 50%;
+  left: 50%;
 }
 
-.msg-label {
-  background-color: black;
-}
-.icon {
-  speak: none;
-  width: 24px;
-  height: 24px;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  vertical-align: middle;
-  fill: #ffffff;
+#message-form-block{
+  display:block;
+  position: fixed;
+  bottom: 0px;
+  background-color: white;
+  width:100%;
+  padding-left: 10%;
+  padding-right: 10%;
+
 }
 
-$light-gray: #aaaaaa;
-$medium-gray: #666666;
-$dark-gray: #555555;
-$dark-white: #e0e0e0;
-$sky-blue: #e1f1f7;
-$gun-metal-black: #2d2d2d;
-$blue: #009EDB;
-$dark-blue: #0C83B5;
-$navy-blue: #46639a;
-$light-blue: #64b8d8;
-$red: #DF3C3C;
-$dark-red: #A40B0B;
-$light-red: #FF7676;
-$yellow: #f7e137;
-$dark-yellow: #e4c202;
-$white: #ffffff;
-$black: #000000;
-
-$transition-speed: 200ms;
-$video-border-width: 2px;
-
-@mixin star-border {
-  position: absolute;
-  margin-left: -2.4rem;
-  content: '\e90a';
-  font-family: 'Kitchen Sink';
-  color: $dark-yellow;
+.message{
+  
+  margin: 10px;
 }
 
-@mixin full-star {
-  &:before {
-    content: '\e90b';
-    font-family: 'Kitchen Sink';
-    color: $yellow;
-  }
-
-  &:after {
-    @include star-border;
-  }
-
-  @include hover-star;
+.message-date{
+  
+  font-size: 12px;
 }
 
-@mixin hover-star {
-  &:hover:before {
-    content: '\e90b';
-    font-family: 'Kitchen Sink';
-    color: #e6c300;
-  }
-
-  &:hover:after {
-    @include star-border;
-    color: #c1a503;
-  }
+#members-box{
+    
+    position: fixed;
+    top: 70px;
+    right: 20px;
+    text-align: right;
 }
 
-button, input, textarea {
-  font-family: inherit;
-  letter-spacing: .03rem;
-  outline: none;
-}
-
-body, html {
-  height: 100%;
-  font-family: 'Cisco Sans Extra Light', sans-serif;
-}
-
-body {
-  display: flex;
-  background-image: url(../images/spaceballs-bg.jpg);
-  background-size: cover;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  margin: 0;
-  letter-spacing: .03rem;
-}
-
-h1 {
-  font-weight: normal;
-  color: $dark-gray;
-  font-size: 1.5rem;
-  margin: 1rem;
-}
-
-h2 {
-  font-size: 1.2rem;
-  align-self: center;
-}
-
-.loader {
-  width: 6rem;
-  height: 1rem;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 1.5rem;
-
-  &.inactive {
-    display: none;
-  }
-}
-
-.circle {
-  width: 1rem;
-  height: 1rem;
-  background-color: $blue;
-  transform: scale(0.5);
-  opacity: 0.5;
-  display: inline-block;
-  border-radius: 100%;
-}
-
-@mixin keyframes($animation-type){
-  @-webkit-keyframes #{$animation-type} { @content; }
-  @-moz-keyframes #{$animation-type} { @content; }
-  @-o-keyframes #{$animation-type} { @content; }
-  @keyframes #{$animation-type} { @content; }
-}
-
-@include keyframes(loading) {
-  0%, 100% {
-    transform: scale(0.5);
-    opacity: 0.5;
-  }
-  50% {
-    transform: scale(1.2);
-    opacity: 1;
-  }
-}
-
-@for $i from 1 through 5 {
-  .circle:nth-child(#{$i}) {
-    animation: loading 900ms ease-in-out infinite #{$i * 150ms};
-  }
-}
-
-form.container {
-  border: 2px solid $dark-white;
-  border-radius: 5px;
-  display: flex;
-  transition: border-color $transition-speed ease-in;
-
-  &.active {
-    border-color: $light-blue;
-  }
-
-  input[type=text] {
-    border: none;
-    width: 38rem;
-    font-size: 1.2rem;
-    padding: .5rem;
-    margin: .5rem;
-    outline: none;
-  }
-
-  button {
-    align-self: center;
-    margin: 0 .7rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
-  }
-}
-
-button:enabled {
-  transition: background $transition-speed ease-in;
-  cursor: pointer;
-}
-
-.primary-button {
-  border-radius: 1.5rem;
-  padding: 0 1rem;
-  color: white;
-  font-size: 1.5rem;
-  outline: none;
-  background: $blue;
-  border: 2px solid $dark-blue;
-
-  &:hover:enabled {
-    background: $light-blue;
-  }
-
-  &.red {
-    background: $red;
-    border: 1px solid $dark-red;
-
-    &:hover:enabled {
-      background: $light-red;
-    }
-  }
-
-  &.small {
-    font-size: 1.2rem;
-    padding: .3rem 1.4rem;
-
-    i.fa {
-      font-size: 1.2rem;
-      margin-top: .05rem;
-    }
-  }
-
-  &.large {
-    padding: .8rem 3.5rem;
-    border-radius: 5rem;
-  }
-
-  &.wide {
-    padding: .4rem 3rem;
-  }
-}
-
-.call-button {
-  width: 4rem;
-}
-
-.call-button:disabled, .toggle:disabled, .toggle:disabled.off {
-  background: none;
-  border: 2px solid transparent;
-  color: $light-gray;
-}
-
-.answer-button {
-  height: 2.5rem;
-
-  &:before {
-    margin-right: .5rem;
-  }
-
-  &:disabled {
-    background: $dark-white;
-    color: $light-gray;
-    border: 1px solid $light-gray;
-  }
-}
-
-.call-button, .primary-button {
-  position: relative;
-  cursor: auto;
-
-  span {
-    display: none;
-  }
-
-  &:hover .tooltip-message {
-    display: inline;
-  }
-
-  .tooltip-message {
-    font-family: 'Cisco Sans Extra Light';
-    position: absolute;
-    color: $dark-gray;
-    top: -2.35rem;
-    font-size: 0.75rem;
-    right: -0.85rem;
-    border: 1px #bcbcbc solid;
-    border-radius: 1rem;
-    padding: 0.4rem 1rem;
-    background: #ebebeb;
-    white-space: nowrap;
-
-    &:after, &:before {
-      top: 100%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none;
-      right: 0.1rem;
-    }
-
-    &:after {
-      border-color: rgba(235, 235, 235, 0);
-      border-top-color: #ebebeb;
-      border-width: 6px;
-      margin-right: 36px;
-    }
-
-    &:before {
-      border-color: rgba(188, 188, 188, 0);
-      border-top-color: #bcbcbc;
-      border-width: 7px;
-      margin-right: 35px;
-    }
-  }
-}
-
-#active-call-overlay .tooltip-message {
-  top: -2.5rem;
-  right: -1.5rem;
-  z-index: 4;
-}
-
-.button-divider {
-    border-left: 1px solid $dark-white;
-    height: 2.5rem;
-    align-self: center;
-}
-
-.audio-button {
-  &:before {
-    content: '\e905';
-    font-family: 'Kitchen Sink';
-  }
-
-  &.unavailable:before, &.audio-button:disabled:before {
-    content: '\e904';
-  }
-}
-
-.phone-button {
-  &:before {
-    content: '\e900';
-    font-family: 'Kitchen Sink';
-    margin-right: .5rem;
-  }
-
-  &.unavailable:before, &.phone-button:disabled:before {
-    content: '\e901';
-  }
-}
-
-.video-button {
-  &:before {
-    content: '\e903';
-    font-family: 'Kitchen Sink';
-  }
-
-  &.video-button:disabled:before {
-    content: '\e902';
-  }
-}
-
-.rating {
-  border: none;
-  position: relative;
-}
-
-.star-radio {
-  display: none;
-
-  &:checked ~ .star-label {
-    @include full-star;
-  }
-}
-
-.star-label {
-  float: right;
-  cursor: pointer;
-  font-size: 2.25rem;
-  padding: 0 0.25rem;
-
-  &:before {
-    content: '\e909';
-    font-family: 'Kitchen Sink';
-    color: $light-gray;
-  }
-
-  @include hover-star;
-
-  &:hover ~ .star-label {
-    @include full-star;
-  }
-}
-
-.toggle {
-  width: 2.75rem;
-  height: 2.75rem;
-  padding: 0;
-
-  &:before {
-    vertical-align: middle;
-  }
-
-  &.off {
-    background: $white;
-    color: $blue;
-    border: 1px solid $blue;
-
-    &:hover:enabled {
-      background: lighten($dark-white, 10%);
-    }
-  }
-}
-
-i.fa {
-  font-size: 1.4rem;
-
-  &.action {
-    font-size: 1.2rem;
-    margin-right: .2rem;
-  }
-}
-
-.sign-out {
-  &:before {
-    content: "\e908";
-    font-family: 'Kitchen Sink';
-    font-style: normal;
-    margin-right: .25rem;
-  }
-}
-
-.branding {
-  background-image: url(../images/spark-logo.png);
-  background-repeat: no-repeat;
-  background-position: left;
-  background-size: 3rem;
-  padding: 1rem 1rem 1rem 3.5rem;
-  margin: 2rem 0 0 2rem;
-  font-size: 1.2rem;
-  color: $dark-gray;
-
-  &.large {
-    background-position: top;
-    background-size: 7rem;
-    font-size: 2.5rem;
-    padding: 8rem 0 4rem;
-    margin: 0;
-  }
-}
-
-.logout {
-  background: none;
-  border: none;
-  font-size: 1rem;
-  color: $dark-gray;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 2rem 2rem 0 0;
-
-  &:disabled {
-    color: $light-gray;
-  }
-}
-
-main {
-  width: 56rem;
-  height: 36rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 15px;
-  box-shadow: 0 1px 5px 0 #C2C2C2;
-  background: white;
-
-  &.login-page {
-    justify-content: center;
-  }
-
-  header, footer {
-    z-index: 10;
-  }
-
-  header {
-    display: flex;
-    align-self: flex-start;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width:100%;
-
-    .feedback-button {
-      background: none;
-      border: none;
-      margin: 1.5rem 2rem 2.5rem;
-      font-size: 1rem;
-      color: $dark-gray;
-      align-self: flex-end;
-
-      &.hidden {
-        visibility: hidden;
-      }
-
-      &:before {
-        content: '\e907';
-        font-family: 'Kitchen Sink';
-        margin-right: 0.25rem;
-        font-size: 1.25rem;
-        display: inline;
-        position: relative;
-        top: 4px;
-      }
-    }
-  }
-
-  section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-
-    .overlay {
-      display: flex;
-      position: absolute;
-      width: 56rem;
-      height: 25rem;
-      background: white;
-      z-index: 9;
-    }
-  }
-}
-
-.avatar-image {
-  position: relative;
-
-  img {
-    border-radius: 50%;
-    border: 2px solid $light-gray;
-    height: 10rem;
-    width: 10rem;
-  }
-
-  &.failed:after {
-    content: '\f00d';
-    font-family: FontAwesome;
-    position: absolute;
-    bottom: 1rem;
-    right: 0;
-    color: white;
-    background: #DF3C3C;
-    border-radius: 50%;
-    font-size: 2rem;
-    padding: .3rem .5rem;
-  }
-}
-
-.call-email {
-  font-size: 1.2rem;
-  margin: 1rem 0;
-  color: $dark-gray;
-}
-
-.call-status {
-  display: none;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.video-container, .controls-container {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: center;
-  margin-bottom: 1rem;
-}
-
-.video-container {
-  position: relative;
-  width:50rem;
-
-  &:before,  &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: .1rem;
-    z-index: 1;
-    border-radius: 50%;
-  }
-
-  &:before {
-    filter: blur(1px);
-    background: #d6d6d6;
-  }
-
-  &:after {
-    height: .5rem;
-    filter: blur(5px);
-    bottom: -.15rem;
-    background: #4c4c4c;
-  }
-}
-
-#incoming-call-overlay {
-  justify-content: center;
-  background: transparentize(lighten($light-blue, 10%), 0.2);
-  border: 1px solid $blue;
-
-  h1 {
-    font-size: 2rem;
-    color: darken($dark-blue, 10%);
-  }
-
-  .avatar-image img {
-    background: white;
-  }
-
-  .incoming-call-controls {
-    flex-direction: row;
-
-    button {
-      margin-right: 1.5rem;
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-}
-
-#user-feedback-overlay {
-  h1 {
-    align-self: center;
-    margin: 0;
-  }
-
-  .comments {
-    display: flex;
-    width: 70%;
-    flex-direction: column;
-
-    h1 {
-      margin: 0.5rem 1rem 1rem 1rem;
-    }
-
-    textarea {
-      text-align: justify;
-      white-space: normal;
-      resize: none;
-      padding: 0.5rem 0.75rem;
-      border-radius: 0.25rem;
-      height: 7rem;
-      font-size: 1rem;
-      border: 2px solid $light-gray;
-    }
-  }
-
-  .include-logs {
-    display: flex;
-    align-self: center;
-    width: 70%;
-    margin-top: 0.75rem;
-    color: $medium-gray;
-
-    input {
-      margin-left: 0.75rem;
-      margin-right: 0.5rem;
-    }
-
-    div {
-      margin-left: 0.5rem;
-    }
-  }
-
-  .buttons {
-    margin-top: 2rem;
-
-    button {
-      font-size: 1rem;
-      padding: 0.4rem 0.7rem;
-      margin: 0.5rem;
-      width: 10rem;
-    }
-
-    .cancel {
-      background: none;
-      color: $blue;
-
-      &:hover {
-        background-color: $sky-blue;
-      }
-    }
-  }
-}
-
-.video {
-  background: black;
-}
-
-#incoming-call, .incoming-controls {
-  width: 32rem;
-}
-
-#outgoing-call, .outgoing-controls {
-  width: 14rem;
-  margin-left: -$video-border-width;
-}
-
-.outgoing-video, .incoming-video {
-  display: inline-block;
-  position: relative;
-  border: $video-border-width solid $navy-blue;
-  z-index: 2;
-}
-
-.incoming-video {
-  height: 18rem;
-}
-
-.outgoing-video {
-  height: 10.5rem;
-  border-left: none;
-}
-
-.video-overlay {
-  top: 0px;
-  left: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  background-color: $gun-metal-black;
-  z-index: 3;
-
-  &:after {
-    font-family: 'Kitchen Sink';
-    content: '\e902';
-    align-content: center;
-    color: $dark-white;
-  }
-}
-
-#incoming-call-video-overlay {
-  width: 32rem;
-  height: 18rem;
-
-  &:after {
-    font-size: 8rem;
-  }
-}
-
-#outgoing-call-video-overlay {
-  width: 14rem;
-  height: 10.5rem;
-  z-index: 3;
-  margin-left: -$video-border-width;
-
-  &:after {
-    font-size: 4rem;
-  }
-}
-
-#incoming-call {
-  height: 18rem;
-}
-
-#outgoing-call {
-  height: 10.5rem;
-}
-
-.incoming-controls, .outgoing-controls {
-  display: flex;
-  justify-content: center;
-
-  button {
-    margin: 0 0.5rem;
-  }
+.member-letter{
+  font-size: 14px;
+  margin: 5px;
 }
