--- a/js/members.ejs
+++ b/js/members.ejs
@@ -2,7 +2,7 @@
 	<div>
 	
 	<span class="mdl-chip mdl-chip--contact">
-	    <span class="mdl-chip__contact mdl-color--primary mdl-color-text--white"><%= member.displayName.charAt(0).toUpperCase() %></span>
+	    <span class="mdl-chip__contact mdl-color--accent mdl-color-text--white"><%= member.displayName.charAt(0).toUpperCase() %></span>
 	    <span class="mdl-chip__text"><%= member.displayName.split(' ')[0] %></span>
 	</span>
 	</div>
