--- a/js/message.ejs
+++ b/js/message.ejs
@@ -1,5 +1,5 @@
 
-	<div class="message">
+	<div class="message" id="<%= message.id %>">
 		<div> 
 			<span class="mdl-color-text--grey">
 				<%= message.nameAuthor %>
@@ -10,5 +10,5 @@
 			</span>
 		</div>
 	<%= message.text %>
-	<img id="<%= message.id %>" src="">
+	<% if(message.files){ %><img src=""><% } %>
 	</div>
